# Bharat-Assignment-Anirudh

./: .gitignore  ASSUMPTIONS.md  README.md  make_commits.sh  package.json
backend/: AI_USAGE.md  DECISIONS.md  FORENSICS.md  README.md  pyproject.toml  requirements.txt
backend/api/: main.py
backend/notebooks/: 01_exploration.ipynb
backend/src/: db.py  flags.py  identity.py  ingest.py  normalize.py  rates.py  reconcile.py
backend/tests/: test_flags.py
frontend/: bun.lockb  package.json
frontend/src/: routeTree.gen.ts  router.tsx  styles.css
frontend/src/components/: AppHeader.tsx  ConfidenceBadge.tsx  DeltaHistogram.tsx  FlagChip.tsx  KPICard.tsx  Money.tsx
frontend/src/lib/: api.ts  flags.ts  money.ts
frontend/src/routes/: __root.tsx  index.tsx  triage.tsx  worker.$workerId.tsx
