[project]
name = "bharat-recon"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=0.10",
    "pandas>=2.1",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "phonenumbers>=8.13",
    "rapidfuzz>=3.6",
    "python-dateutil>=2.8",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"
